<resources>
    <string name="app_name">Who is it</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="my_cart">My Cart</string>
    <string name="delete">DELETE</string>
    <string name="voeg_toe_student">Voeg student toe</string>
    <string name="title_activity_add_student">AddStudentActivity</string>
    <string name="opslaan">Opslaan</string>
    <string name="kenmerken">Kenmerken</string>
    <string name="naam">Naam</string>
    <string name="action_refresh">Opnieuw spelen</string>
    <string name="add_activity_new_student">Nieuw item</string>
    <string name="add_activity_edit_student">Bewerk item</string>
    <string name="delete_dialog_msg">Dit item definitief verwijderen?</string>
    <string name="cancel">Annuleren</string>
</resources>
