<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CatalogActivity">

    <item
        android:id="@+id/save_student"
        android:title="@string/opslaan"
        android:icon="@drawable/ic_save"
        app:showAsAction="always" />
    <item
        android:id="@+id/delete_student"
        android:icon="@drawable/ic_trash"
        android:title="@string/delete"
        app:showAsAction="always" />
</menu>